[gd_scene load_steps=10 format=3 uid="uid://d3nnfyxwh6t2r"]

[ext_resource type="Texture2D" uid="uid://d4gkrncg0ywci" path="res://assets/sprites/environment/rooms/room_type_1/doors_lever_chest_animation.png" id="1_f6wuf"]
[ext_resource type="Script" uid="uid://c3kc72wq2sb1m" path="res://scripts/environment/objects/doors.gd" id="1_xoxt8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dknsx"]
size = Vector2(50, 52)

[sub_resource type="Animation" id="Animation_xoxt8"]
resource_name = "open_door"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doorSprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(128, 96, 32, 32)]
}

[sub_resource type="Animation" id="Animation_dknsx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doorSprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(128, 96, 32, 32)]
}

[sub_resource type="Animation" id="Animation_226gs"]
resource_name = "closed_door"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doorSprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 96, 32, 32)]
}

[sub_resource type="Animation" id="Animation_ig0qi"]
resource_name = "opening_door"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doorSprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 96, 32, 32), Rect2(32, 96, 32, 32), Rect2(64, 96, 32, 32), Rect2(96, 96, 32, 32), Rect2(128, 96, 32, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1mmuj"]
_data = {
&"RESET": SubResource("Animation_dknsx"),
&"closed_door": SubResource("Animation_226gs"),
&"open_door": SubResource("Animation_xoxt8"),
&"opening_door": SubResource("Animation_ig0qi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xoxt8"]
size = Vector2(61, 34)

[node name="doors" type="Node2D"]
script = ExtResource("1_xoxt8")

[node name="doorSprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_f6wuf")
region_enabled = true
region_rect = Rect2(128, 96, 32, 32)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_dknsx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1mmuj")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="StaticBodyCollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.5, 7)
shape = SubResource("RectangleShape2D_xoxt8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
